# birria

./: .gitignore  CHANGELOG  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: publish.yml  test.yml  test_publish.yml
src/birria/: __init__.py  _birria.py
test/: test_birria.py
