[metadata]
name = birria
version = attr: birria.__version__
description = Simple declarative cli argument parsing
long_description = README.md
long_description_content_type = text/markdown
url = https://github.com/ntn9995/birria
author = 1Karus
maintainer = 1Karus
keywords = cli, library
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir =
    = src
packages = birria

[options.packages.find]
where = src

[flake8]
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .vscode,
    env
    .env

ignore =
    # H306: imports not in alphabetical order (time, os)
    H306,
    # H403: multi line docstrings should end on a new line
    H403,
    # W292: no newline at EOF
    W292,
    # E203: whitespace before ':'
    E203 
    # E231: missing whitespace after ':'
    E231,
    # E252: missing whiespace around parameter equals
    E252
    # E221: multiple spaces before operator
    E221
    # W503: line break before operator
    W503
    # W292: no newline at end of file
    W292

max-line-length = 117

[mypy]
python_version = 3.7
warn_unused_configs = True
ignore_missing_imports = True
show_error_codes = True
